--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
   <h1 id="title">Twitch API Project</h1>
   
   <div class="row">
-    <div class="col-lg-3"></div>
-    <div id="output" class="col-lg-6"></div>
-    <div class="col-lg-3"></div>
+    <div class="col-md-3"></div>
+    <div id="output" class="col-md-6"></div>
+    <div class="col-md-3"></div>
   </div>
   
    <p id="made-by">Made by <a id="made-by-link"  href="https://www.freecodecamp.com/fortmaximus" target="_blank">fortMax</a></p>
